2003/09/23 13:38 (+0200) kaffeetisch

	* t/GnomeIconTheme.t: Altered test #2 to only check whether the return
	value is defined.

2003/09/22 09:26 rwmcfa1

	* t/GnomeIconEntry.t: set_max_saved does not exist til after 2.3.3 so 
	don't call it unless we can.

2003/09/21 20:19 rwmcfa1

	* Makefile.PL: fixed bug in specfile generation

2003/09/21 20:13 kaffeetisch

	* xs/GnomeIconLookup.xs: Allow undef to be passed for the cutom_icon
	parameter to gnome_icon_lookup_sync.

2003/09/21 19:55 kaffeetisch

	* TODO: Remove GnomePixmap. It's deprecated.

	* t/GnomeClient
	* t/GnomeClienReal: Fix indention.

	* xs/GnomeClient.xs: Fix gnome_client_request_interaction.  Should work
	now, but doesn't.

2003/09/21 18:24 kaffeetisch

	* xs/GnomeIconTheme.xs: Free strdup'ed strings.

2003/09/21 17:46 kaffeetisch

	* Makefile.PL: Use libbonoboui instead of libbonobo as the hash key to
	generate correct macros.

	* xs/Gnome2.xs: Implement gnome_get_version_info and
	bonobo_get_version_info.

	* t/GnomeEntry.t
	* t/GnomeIconTheme.t
	* t/GnomeThumbnail.t: Use the new version methods to find out if certain
	tests are to be skipped.

2003/09/21 11:00 muppetman

	* Makefile.PL, gnome2perl.h: add a slight hack to generate version-
	checking macros a la GTK_CHECK_VERSION for the libraries that don't
	do that for us.

	* xs/GnomeIconEntry.xs: use the shiny new LIBGNOMEUI_CHECK_VERSION() to
	avoid trying to compile gnome_icon_entry_set_max_saved on versions
	prior to 2.3.3 (because they don't have it).

2003/09/21 16:06 kaffeetisch

	* TODO: Updated to reflect recent changes.

2003/09/21 00:05 muppetman (EDT, not back in time)

	* AUTHORS: torsten forgot to credit himself :-)

	* xs/GnomeIconLookup.xs, xs/GnomeIconTheme.xs, xs/GnomeThumbnail.xs:
	GnomeIconTheme and GnomeThumbnailFactory didn't appear until about 2.0.6,
	according to the changelogs for libgnomeui.  only compile this stuff if
	we have the right types defined.

2003/09/20 23:32 rwmcfa1
